--- a/index.css
+++ b/index.css
@@ -2197,6 +2197,7 @@
   display: flex;
   padding-top: var(--dl-space-space-fiveunits);
   flex-direction: column;
+  background-color: #ec96aa;
 }
 .home-max-width3 {
   flex-direction: column;
