matched the home-text18 from homespeakers to see it clearly agains the new background color I added

--- a/index.css
+++ b/index.css
@@ -2210,7 +2210,7 @@
   flex-direction: column;
 }
 .home-text18 {
-  color: var(--dl-color-scheme-darkgray);
+  color: #0d1f3a;
   font-style: normal;
   text-align: center;
   font-weight: 500;
